参数改动配置